Deactivate bootstrap and remove bootstrap classes, add meta information for viewport (solves scaling on mobile), fix resizing for message box, add @media classes for responsiveness

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -5,20 +5,20 @@ html {
 }
 
 body,html {
-  margin: 0;
+  margin: 2rem;
   padding: 0;
   font-family: sans-serif;
 }
 
+
 .message {
-  display: block;
   justify-content: center;
   border-radius: .5rem;
   margin: auto;
   margin-top: 5rem;
   font-size: 1.5rem;
-  padding: 1rem .5rem;
-  max-width: 50rem;
+  padding: 1.5rem;
+  max-width: 40rem;
   min-width: 10rem; 
   text-align: center;
   color: white;
@@ -64,4 +64,15 @@ kbd {
   text-transform: uppercase;
   letter-spacing: .1rem;
   color: #ffc600;
+}
+
+@media (min-width: 10rem) {
+  .keys{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+}
+@media (min-width: 560rem) {
+ .keys{flex-wrap:unset}
 }
